# peasy-compress

./: README.md  demo.tape  pyproject.toml
src/peasy_compress/: __init__.py  api.py  cli.py  engine.py
tests/: test_engine.py
